<resources>
    <string name="app_name">NutriTrack</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_address">Alamat</string>
    <string name="prompt_password">Kata Sandi</string>
    <string name="prompt_confirm_password">Konfirmasi Kata Sandi</string>
    <string name="action_sign_in">Submit</string>
    <string name="action_sign_in_short">Submit</string>
    <string name="welcome">"Selamat Datang!"</string>
    <string name="invalid_email">Email tidak sesuai</string>
    <string name="invalid_password">Kata sandi minimal 5 karakter</string>
    <string name="login_failed">"Autentikasi Pengguna Gagal"</string>
    <string name="no_account_info">Tidak Punya Akun?</string>
    <string name="action_register">Daftar</string>
    <string name="exist_account_info">Sudah Punya Akun?</string>
    <string name="action_login">Login</string>
    <string name="or_text">Atau</string>
    <string name="fb_btn_text">Tombol Facebook</string>
    <string name="google_btn_text">Tombol Google</string>
    <string name="logo_nutritrack_text">Logo NutriTrack</string>
    <string name="login_heading">MASUK</string>
    <string name="register_heading">DAFTAR</string>
    <string name="x_btn_text">Tombol X</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_btn_text">Konfirmasi</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_log_food">Add</string>
    <string name="title_report">Report</string>
    <string name="title_diary">Diary</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Tahan</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="action_forgot_pass">Reset</string>
    <string name="action_logout">Logout</string>
    <string name="txtMotivation">Perubahan besar dimulai dari langkah kecil.</string>
    <string name="title_nav_home">Beranda</string>
    <string name="title_nav_report">Ringkasan</string>
    <string name="title_nav_log">Asupan</string>
    <string name="title_nav_diary">Harian</string>
    <string name="title_nav_profile">Profil</string>
    <string name="subtitle_calorie_goal_card">Sisa Kalori = Target - Total Konsumsi</string>
    <string name="title_calorie_goal_card">Target Kalori</string>
    <string name="txt_remaining_goal_calorie">Sisa Kalori</string>
    <string name="txt_progress_food">Asupan</string>
    <string name="txt_progress_water">Air</string>
    <string name="title_article">Artikel Pilihan</string>
    <string name="txt_back_btn">Kembali</string>
    <string name="txt_tab_all">Semua Makanan</string>
    <string name="txt_tab_meals">Menu Harian</string>
    <string name="title_weight_progress">Progress Berat Badan</string>
    <string name="txt_no_log">Catatan Kosong</string>
    <string name="title_ai_insight">Rekomendasi Pintar</string>
    <string name="subtitle_weight_progress">Lihat perkembangan berat badanmu setiap hari</string>
    <string name="title_daily_calories">Konsumsi Harian</string>
    <string name="txt_still_need_to_gain">Sisa Kalori Dibutuhkan</string>
    <string name="title_weekly_report">Ringkasan Mingguan</string>
    <string name="action_edit_profile">Perbarui Profil</string>
    <string name="txt_breakfast">Sarapan</string>
    <string name="txt_lunch">Makan Siang</string>
    <string name="txt_dinner">Makan Malam</string>
    <string name="action_save">Simpan</string>
    <string name="txt_search_food">Cari makanan...</string>
    <string name="action_today_logged_meal">Asupan Hari ini: </string>

    <string-array name="meal_categories">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>

</resources>