<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/logo_nutritrack_text"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        style="@style/RoundedCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:paddingHorizontal="24dp"
        android:paddingVertical="48dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:paddingVertical="48dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/register_heading"
                android:textSize="24sp"
                android:layout_marginBottom="8dp"/>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/exist_account_info"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                <TextView
                    android:id="@+id/btnToLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/action_login"
                    android:textColor="@color/design_default_color_primary"
                    android:layout_marginLeft="4dp"
                    android:textSize="16sp"/>
            </LinearLayout>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:autofillHints="@string/prompt_name"
                android:background="@drawable/input_bg"
                android:elevation="100dp"
                android:fontFamily="@font/montserrat"
                android:hint="@string/prompt_name"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:paddingHorizontal="32dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="@string/prompt_username"
                android:background="@drawable/input_bg"
                android:fontFamily="@font/montserrat"
                android:hint="@string/prompt_username"
                android:imeActionLabel="@string/action_sign_in"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:paddingHorizontal="32dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="@string/prompt_address"
                android:background="@drawable/input_bg"
                android:fontFamily="@font/montserrat"
                android:hint="@string/prompt_address"
                android:inputType="textMultiLine"
                android:imeOptions="actionNext"
                android:minLines="2"
                android:maxLines="2"
                android:paddingHorizontal="32dp"
                android:scrollbars="vertical"
                android:gravity="center|start"
                android:selectAllOnFocus="true"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="14sp" />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="@string/prompt_password"
                android:background="@drawable/input_bg"
                android:fontFamily="@font/montserrat"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:paddingHorizontal="32dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="@string/prompt_confirm_password"
                android:background="@drawable/input_bg"
                android:fontFamily="@font/montserrat"
                android:hint="@string/prompt_confirm_password"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingHorizontal="32dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:enabled="false"
                android:fontFamily="@font/montserrat_semibold"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/action_sign_in"/>

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="64dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/password"
                app:layout_constraintStart_toStartOf="@+id/password"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>