<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardCalorieGoal">

        <LinearLayout
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingTop="16dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp">

            <TextView
                android:text="@string/title_calorie_goal_card"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp" />

            <TextView
                android:id="@+id/tvCalorieGoal"
                android:text="1280 cal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_500"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"/>

            <TextView
                android:text="@string/subtitle_calorie_goal_card"
                android:textSize="13sp"
                android:textColor="#6B6B6B"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <!-- Food & Water Row -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center">

                <!-- Food -->
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:src="@drawable/ic_food"
                        android:layout_width="24dp"
                        android:layout_height="24dp"/>

                    <TextView
                        android:text="@string/txt_progress_food"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:layout_marginTop="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <ProgressBar
                        android:id="@+id/progressFood"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="60dp"
                        android:layout_height="6dp"
                        android:progress="60"
                        android:max="100"
                        android:progressDrawable="@drawable/progress_food"
                        android:layout_marginTop="4dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:gravity="center"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical">
                    <com.ekn.gruzer.gaugelibrary.ArcGauge
                        android:id="@+id/calories_gauge"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginHorizontal="8dp"/>


                    <TextView
                        android:id="@+id/tvRemaining"
                        android:text="1,000\nRemaining"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:textColor="@color/grey"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <!-- Water -->
                <LinearLayout
                    android:id="@+id/btnWater"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="6dp">

                    <ImageView
                        android:src="@drawable/ic_water"
                        android:layout_width="24dp"
                        android:layout_height="24dp"/>

                    <TextView
                        android:text="@string/txt_progress_water"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:layout_marginTop="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <ProgressBar
                        android:id="@+id/progressWater"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="60dp"
                        android:layout_height="6dp"
                        android:progress="40"
                        android:max="100"
                        android:progressDrawable="@drawable/progress_water"
                        android:layout_marginTop="4dp"/>
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
</LinearLayout>